--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,6 @@ controllers:
 app_lucky_number:
     path: /lucky/number
     controller: App\Controller\LuckyController::number
+index:
+    path: /
+    controller: App\Controller\TestController::index
