--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,9 +2,9 @@ controllers:
     resource: ../src/Controller/
     type: attribute
 # the "app_lucky_number" route name is not important yetcc
-app_lucky_number:
-    path: /lucky/number
-    controller: App\Controller\LuckyController::number
+# app_lucky_number:
+    # path: /lucky/number
+    # controller: App\Controller\LuckyController::number
 #index:
 #    path: /
 #    controller: App\Controller\TestController::index
