--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=04d0c90ad3efb9d8bc126249f78e1faa
 ###< symfony/framework-bundle ###
 
